* 0.161

- Allow binding config defaults for HTTP client threads.

* 0.160

- Use a dedicated thread pool for each HTTP client. The HTTP client binder
  no longer has a withPrivateIoThreadPool() method as all pools are private.
- Use colon instead of space for LD_PRELOAD separator in launcher.

* 0.159

- Update to Jetty 9.4.8.v20171121.
- Fix building against JMX module on Java 9.
- Fix running on Java 9 due to a missing javax.annotations dependency.
- Fix HTTP/2 errors with JAX-RS by disabling remote async error notifications.
- Add HTTP/2 stream idle timeout config to HTTP server.

* 0.158

- Add support for setting process name on Linux ppc64le.
- Rename HTTP client selector config parameter to "http-client.selector-count".
- Add HTTP client option to perform connect operations in blocking mode.
- Add HTTP server option to disable recording request complete information.
- Reduce HTTP client executor load when using IP address literals.

* 0.157

- Fix Kerberos SPNEGO handling in HTTP client.

* 0.156

- Add HTTP client selector thread count config.
- Always ask for client certificates in HTTP server.
- Decrease discovery refresh wait time at startup.
- Remove workaround for Jetty client Kerberos realm bug.
- Add security module with support for reading and writing PEM files and
  creating certificate signing requests.

* 0.155

- Remove LifeCycleManager shutdown hook when stop() is called.

* 0.154

- Upgrade to Airbase 74.
- Buffer log messages to improve throughput.

* 0.153

- Downgrade to Jetty 9.4.6.v20170531.

* 0.152

- Upgrade to Airbase 72.
- Add config for HTTP client timeout executor concurrency.

* 0.151

- Upgrade to Airbase 71.
- Upgrade to Jersey 2.26.
- Add instance sizes to HyperLogLog and SparseHll.
- Support SSL KeyManager password for HTTP server.

* 0.150

- Upgrade to Airbase 68.
- Upgrade to Jetty 9.4.7.v20170914.
- Prevent "Address already in use" for HTTP server.
- Remove @Inject from Logger.
- Add HTTP/2 input buffer size config.